--- a/style.css
+++ b/style.css
@@ -1,9 +1,26 @@
 * {
-    background-color: black;
+    background-color: rgb(253, 253, 244);
+    font-family: Helvetica, sans-serif;
+
 }
 
 h1   {
-    color: red;
-    background-color: yellow;
+    color: rgb(0, 0, 0);
+    background-color: rgb(131, 234, 241);
     text-align: center;
+    font-size: 28px;
+}
+
+h2 {
+    font-size: 20px;
+
+}
+
+
+button {
+    text-align: center;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    color: red;
 }
